<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView  android:id="@+id/labelApp"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/hello"
    />

<!-- Start Station -->
<Spinner android:id="@+id/spinStart"	
	android:layout_alignParentLeft="true"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_below="@id/labelApp"
	android:prompt="@string/titleSelStation"
	/>

<Button android:id="@+id/btnDetail1"
	android:layout_toLeftOf="@id/spinStart"
	android:layout_alignTop="@id/spinStart"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_alignParentRight="true"
    android:layout_marginLeft="10dip"
	android:text="@string/btnDetail"
	/>

<!-- End station -->
<Spinner android:id="@+id/spinEnd"
	android:layout_below="@id/spinStart"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:prompt="@string/titleSelStation"
	/>

<Button android:id="@+id/btnDetail2"
	android:layout_toLeftOf="@id/spinEnd"
	android:layout_alignParentRight="true"
	android:layout_alignTop="@id/spinEnd"
    android:layout_marginLeft="10dip"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/btnDetail"
	/>

<Button android:id="@+id/btnSearch"
	android:layout_below="@id/spinEnd"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/btnSearch"
	/>

<!-- Result information -->
<TextView  android:id="@+id/txtResult"
	android:layout_below="@id/btnSearch"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent" 
    android:text="@string/labelInfo"
    />	
</RelativeLayout>
